--- a/lecciones/Nomenclatura/Numeracion.html
+++ b/lecciones/Nomenclatura/Numeracion.html
@@ -399,7 +399,7 @@
         };
 
         const SUFIJOS = {
-            numerico: ['0', 'o', 'o'],
+            numerico: ['.', '.', '.'],
             carbono: ['ano', 'eno', 'ino']
         };
 
